--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url(http://fonts.loli.net/css?family=Lato:300,400,700);
 
 html { height: 100%; }
 
