--- a/css/custom.css
+++ b/css/custom.css
@@ -192,6 +192,20 @@ a:hover {
 	-webkit-font-smoothing: subpixel-antialiased;
 }
 
+.partialContent {
+    width: 50%;
+    height: 100%;
+    float: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+img {
+  display: block;
+  width: 75%;
+}
+
 .scroller {
 	padding: 10px 5% 10px 5%;
 }
