--- a/css/custom.css
+++ b/css/custom.css
@@ -59,7 +59,7 @@ a:hover {
 }
 
 .menu-panel {
-	background: #f1103a;
+	background: #333333;
 	width: 240px;
 	height: 100%;
 	position: fixed;
@@ -78,7 +78,7 @@ a:hover {
 	font-size: 1.8em;
 	padding: 20px;
 	font-weight: 300;
-	color: #fff;
+	color: #CCCCCC;
 	box-shadow: inset 0 -1px 0 rgba(0,0,0,0.05);
 } 
 
@@ -93,13 +93,13 @@ a:hover {
 	line-height: 3.5;
 	padding: 0 20px;
 	cursor: pointer;
-	background: #f1103a;
-	border-bottom: 1px solid #dd1338;
+	background: #333333;
+	border-bottom: 1px solid #333333;
 }
 
 .menu-toc li a:hover,
 .menu-toc li.menu-toc-current a{
-	background: #dd1338;
+	background: #6699CC;
 }
 
 .menu-panel div {
@@ -139,9 +139,9 @@ a:hover {
 	height: 32px;
 	top: 0;
 	left: 0;
-	background: #f1103a;
+	background: #6699CC;
 	border-radius: 50%;
-	color: #fff;
+	color: #CCCCCC;
 	line-height: 30px;
 	text-align: center;
 	speak: none;
@@ -151,7 +151,7 @@ a:hover {
 
 .bb-custom-wrapper nav span:hover,
 .menu-button:hover {
-	background: #000;
+	background: #333;
 }
 
 .bb-custom-wrapper nav span:last-child {
@@ -170,11 +170,11 @@ a:hover {
 	content: '';
 	width: 50%;
 	height: 2px;
-	background: #fff;
+	background: #CCCCCC;
 	top: 50%;
 	margin-top: -1px;
 	left: 25%;
-	box-shadow: 0 -4px #fff, 0 4px #fff;
+	box-shadow: 0 -4px #CCCCCC, 0 4px #CCCCCC;
 }
 
 .no-js .bb-custom-wrapper nav span,
@@ -199,13 +199,18 @@ a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    background: #6699CC;
 }
 
 img {
   display: block;
   width: 60%;
 }
-
+.text h1 {
+    color: rgba(0, 48, 96, 1);
+    padding: 10px;
+}
 .scroller {
 	padding: 10px 5% 10px 5%;
 }
@@ -217,22 +222,22 @@ img {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 20px;
+	height: 50px;
 	z-index: 100;
 	pointer-events: none;
-	background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
-	background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
-	background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
-	background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
+	background: -webkit-linear-gradient(top, rgba(0, 48, 96, 1) 0%, rgba(96, 144, 192, 0) 100%);
+	background: -moz-linear-gradient(top, rgba(0, 48, 96, 1) 0%, rgba(96, 144, 192, 0) 100%);
+	background: -o-linear-gradient(top, rgba(0, 48, 96, 1) 0%, rgba(96, 144, 192, 0) 100%);
+	background: linear-gradient(to bottom, rgba(0, 48, 96, 1) 0%, rgba(96, 144, 192, 0) 100%);
 }
 
 .js .content:after {
 	top: auto;
 	bottom: 0;
-	background: -webkit-linear-gradient(bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
-	background: -moz-linear-gradient(bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
-	background: -o-linear-gradient(bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
-	background: linear-gradient(to top, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
+	background: -webkit-linear-gradient(top, rgba(96, 144, 192, 0) 0%, rgba(0, 48, 96, 1) 100%);
+    	background: -moz-linear-gradient(top, rgba(96, 144, 192, 0) 0%, rgba(0, 48, 96, 1) 100%);
+    	background: -o-linear-gradient(top, rgba(96, 144, 192, 0) 0%, rgba(0, 48, 96, 1) 100%);
+    	background: linear-gradient(to bottom, rgba(96, 144, 192, 0) 0%, rgba(0, 48, 96, 1) 100%);
 }
 
 .content h2 {
@@ -254,7 +259,7 @@ img {
 	font-size: 1.2em;
 	line-height: 1.6;
 	font-weight: 300;
-	padding: 5px 8%;
+	padding: 8% 8%;
 	text-align: justify;
 }
 
