--- a/css/custom.css
+++ b/css/custom.css
@@ -284,4 +284,11 @@ img {
 	.content p {
 	    font-size: 0.7em;
 	}
+	img {
+	    width: 70%;
+	}
+	.partialContent {
+	    width: 90%;
+	    height: 50%;
+	}
 }
