--- a/css/custom.css
+++ b/css/custom.css
@@ -275,8 +275,24 @@ img {
         font-size: 0.9em;
     }
 }
+@media all and (min-width: 300px) and (max-width: 900px) and (orientation : landscape){
+    .content p {
+        font-size: 0.5em;
+    	padding: 3% 3%;
+    }
+    .text h1{
+        padding: 0;
+    }
+    .content {
+    	font-size: 50%;
+    }
+    img{
+    	width: 40%;
+    }
 
-@media screen and (max-width: 400px){
+}
+
+@media screen and (max-width: 500px){
 	.menu-panel,
 	.content {
 		font-size: 75%;
@@ -287,4 +303,7 @@ img {
 	img{
 	    width: 90%;
 	}
+	.text h1{
+        padding: 0;
+    }
 }
